<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        app:contentInsetEnd="0dp"
        app:contentInsetStart="0dp"
        android:visibility="gone"
        app:popupTheme="@style/MyMaterialTheme" />

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/white"
        android:fillViewport="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="vertical">


            <TextView
                android:id="@+id/welcome_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:text="@string/setup_check_form"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/acc_full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="15dp"
                android:hint="@string/acc_full_name"
                android:paddingBottom="10dp"
                android:textColor="@color/android_grey"
                android:textColorHint="@color/clouds"
                android:inputType="textNoSuggestions"
                android:background="@drawable/border_bottom"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="15dp"
                android:hint="@string/amount_label"
                android:paddingBottom="10dp"
                android:textColor="@color/android_grey"
                android:textColorHint="@color/clouds"
                android:background="@drawable/border_bottom"
                android:textSize="25sp"
                android:inputType="number"/>


            <Spinner
                android:id="@+id/spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/border_bottom"
                android:paddingBottom="10dp"
                android:textColor="@color/android_grey"
                android:textColorHint="@color/clouds"
                android:textSize="25sp" />


            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="200dp">

                <Button
                    android:id="@+id/generate_check_btn"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/rounded_corner_button"
                    android:text="@string/check_generate_btn"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/send_check_btn"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginBottom="30dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:background="@drawable/rounded_corner_button"
                    android:text="@string/check_send_btn"
                    android:textColor="@color/white" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</LinearLayout>